--- a/adminDashboard.css
+++ b/adminDashboard.css
@@ -97,7 +97,20 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
       position: relative;
       animation: fadeIn 0.3s ease;
+    }.form-section.show {
+      display: flex;
     }
+
+    .form-container {
+     background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  min-width: 300px;
+  max-width: 600px;
+  max-height: 80%;
+  overflow-y: auto;
+  position: relative;
+}
 
     .close-btn {
       position: absolute;
